<resources>
    <string name="app_name">I Music</string>
    <string name="txt_home">Home</string>
    <string name="txt_library">Library</string>
    <string name="txt_discovery">Discovery</string>
    <string name="txt_setting">Settings</string>

    <string name="txt_playlist_provide">System Playlist</string>
    <string name="txt_song_artist">Song artist</string>
    <string name="txt_song_title">Song title</string>
    <string name="txt_recommend_song">Recommend song</string>
    <string name="txt_album_detail">Album detail</string>
    <string name="txt_amount_of_songs">Amount of songs: %s</string>
    <string name="txt_songs_list">Songs list</string>
    <string name="txt_more_album">More album</string>
    <string name="txt_more_song">More song</string>
    <string name="txt_download">Download</string>
    <string name="txt_add_to_favorite">Add to favorite</string>
    <string name="txt_add_to_playlist">Add to playlist</string>
    <string name="txt_play_next">Add to play next</string>
    <string name="txt_view_album">View album</string>
    <string name="txt_view_artist">View artist</string>
    <string name="txt_block_song">Block song</string>
    <string name="txt_report_err">Report error</string>
    <string name="txt_view_song_info">View song information</string>
    <string name="txt_song_title_args">Title: %s</string>
    <string name="txt_artist_args">Artist: %s</string>
    <string name="txt_album_args">Album: %s</string>
    <string name="txt_duration_args">Duration: %s</string>
    <string name="txt_number_of_plays_args">Number of plays: %s</string>
    <string name="txt_is_your_favorite_song_args">Is your favorite song: %s</string>
    <string name="txt_category_args">Category: %s</string>
    <string name="txt_publish_year_args">Publish year: %s</string>
    <string name="txt_now_playing">Now Playing</string>
    <string name="txt_permission_denied">Permission notification is denied!</string>
    <string name="txt_re_require_permission_notification">The application cannot play song without accepted permission notification!</string>
    <string name="txt_agree">I agree</string>
    <string name="txt_recent_heard">Recent heard ></string>
    <string name="txt_favorite_song">Favorite songs ></string>
    <string name="txt_your_playlist">Your playlists ></string>
    <string name="txt_create_playlist">Create playlist</string>
    <string name="txt_your_playlist_name">Your playlist name</string>
    <string name="txt_message_dialog_create_playlist">Create playlist</string>
    <string name="txt_create">Create</string>
    <string name="txt_name_playlist_exists">The name playlist is already exist!</string>
    <string name="txt_create_playlist_success">Create playlist successfully!</string>
    <string name="txt_name_playlist_is_empty">Name playlist is empty!</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_your_playlists">Your playlists:</string>
    <string name="txt_option_create_playlist_custom">Enter name playlist if you want create</string>
    <string name="txt_song_already_added_to_playlist">Song already added to playlist</string>
    <string name="txt_add_song_into_playlist_success">Add song into playlist success</string>
    <string name="txt_song_id_is_null">Song id is null</string>
    <string name="txt_featured_artists"><![CDATA[Featured artists >]]></string>
    <string name="txt_amount_of_interested">Amount of interested: %d</string>
    <string name="txt_list_of_artist">List of artist</string>
    <string name="txt_amount_interested">Amount interested: %d</string>
    <string name="txt_your_interested_artist">Your interested artist: %s</string>
    <string name="txt_name_artist">Name artist: %s</string>
    <string name="txt_song_most_heard">Song most heard ></string>
    <string name="txt_top_40_song">Top 40 songs most heard</string>
    <string name="txt_interested_artist">Interested artist</string>
    <string name="txt_more_rcm_song">More recommend songs</string>
    <string name="txt_album">Album</string>
    <string name="txt_languages">Languages</string>
    <string name="txt_application_language">Application language</string>
    <string name="txt_application_theme">Application theme</string>
    <string name="txt_dark_mode">Dark mode</string>
    <string name="txt_history_search_keys">History search keys</string>
    <string name="txt_recent_searched_songs">Recent searched songs</string>
    <string name="txt_result_search_song">Result search songs</string>
    <string name="txt_clear_all">Clear All</string>
    <string name="txt_confirm_clear_all_data">Are you sure delete this data?</string>
    <string name="txt_notify_when_lost_internet">You must provide Internet to use app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_welcome">Chào mừng đến với Music App</string>
    <string name="txt_explain_login">Please log in to enjoy VIP music content</string>
    <string name="txt_login_with_google">Login with Google</string>
    <string name="txt_me">Me</string>
    <string name="txt_login_success_args">Login Successful! Hi %s</string>
    <string name="txt_login_failed">Login Failed: Cannot instantiate user</string>
    <string name="txt_error_id_token_firebase">Cannot retrieve id token from Firebase</string>
    <string name="txt_loading">Loading...</string>
    <string name="txt_profile_user">Profile</string>
    <string name="txt_paid_subscriptions">Paid subscription</string>
    <string name="txt_admin_panel">Admin panel</string>
    <string name="hint_your_email">Your Email</string>
    <string name="hint_display_name">Display Name</string>
    <string name="txt_update_profile">Update Profile</string>
    <string name="txt_signout">Sign-out</string>
    <string name="txt_confirm_sign_out">Are you sure sign-out?</string>
    <string name="txt_info_song">Song Information</string>
    <string name="txt_name_song">Song Name</string>
    <string name="txt_artist">Artist</string>
    <string name="txt_pick_artist">Select Artist</string>
    <string name="txt_pick_album">Select Album</string>
    <string name="txt_pick_path_song">Song Path or Url</string>
    <string name="txt_genre">Genre</string>
    <string name="txt_pick_genre">Select Genre</string>
    <string name="txt_pick_energy">Energy Level</string>
    <string name="txt_switch_song_vip">VIP Only</string>
    <string name="txt_save_song">Save Song</string>
    <string name="txt_system">System</string>
    <string name="txt_manage_subscriptions">Manage Subscriptions</string>
    <string name="txt_manage_artist">Manage Artists</string>
    <string name="txt_manage_album">Manage Albums</string>
    <string name="txt_manage_song">Manage Songs</string>
    <string name="hint_search_song">Find by name song</string>
    <string name="txt_song_not_found">Song not found</string>
    <string name="txt_option">Option</string>
    <string name="txt_detail_option">Show detail</string>
    <string name="txt_remove_option">Remove data</string>
    <string name="txt_update_option">Update data</string>
    <string name="txt_update_song">Update song</string>
    <string name="txt_add_song">Add song</string>

    <string name="txt_error_format">Wrong format</string>
    <string name="txt_search_by_name">Search by name</string>
    <string name="error_image_song_empty">Please select a song cover image</string>
    <string name="error_title_song_empty">Song title cannot be empty</string>
    <string name="error_artist_song_empty">Please select an artist</string>
    <string name="error_genre_song_empty">Please select a genre</string>
    <string name="error_source_song_empty">Please enter the song URL</string>
    <string name="error_album_song_empty">Please select an album</string>
    <string name="hint_search_album">Find by album name</string>
    <string name="txt_size_album_args">Now: %s songs</string>
    <string name="txt_info_album">Information Album</string>
    <string name="txt_name_album">Album Name</string>
    <string name="txt_save_album">Save Album</string>
    <string name="txt_update_album">Update Album</string>
    <string name="txt_add_album">Add Album</string>
    <string name="error_songs_album_empty">Songs are empty</string>
    <string name="error_artwork_album_empty">Artwork is empty</string>
    <string name="error_name_album_empty">Album name is empty</string>

    <string name="error_name_artist_empty">Artist name is empty</string>
    <string name="error_avatar_artist_empty">Avatar is empty</string>
    <string name="hint_search_artist">Find by Artist name</string>
    <string name="txt_save_artist">Save Artist</string>
    <string name="txt_info_artist">Information Artist</string>
    <string name="txt_update_artist">Update Artist</string>
    <string name="txt_add_artist">Add Artist</string>
    <string name="hint_enter_artist_name">Enter artist name</string>

    <!--    subscription-->
    <string name="txt_duration_days_args">%s days</string>
    <string name="txt_state_active">Active</string>
    <string name="txt_state_unactive">Unactive</string>
    <string name="txt_price_with_vnd">%s VNĐ</string>
    <string name="hint_search_subscription">Find by name subscription</string>
    <string name="txt_info_subscription">Subscription Information</string>
    <string name="txt_name_subscription">Subscription Name</string>
    <string name="txt_description_subscription">Subscription Description</string>
    <string name="txt_price_subscription">Subscription Price</string>
    <string name="txt_duration_subscription">Duration</string>
    <string name="txt_status_subscription">Subscription Status</string>
    <string name="txt_save_subscription">Save Subscription</string>
    <string name="txt_update_subscription">Update Subscription</string>
    <string name="txt_add_subscription">Add Subscription</string>

    <string name="txt_subscribe_now">Subscribe Now</string>
    <string name="txt_vip_saving_subscription">VIP SAVING</string>
    <string name="txt_vip_subscription">VIP Subscription</string>
    <string name="txt_current_vip_info">VIP Expiration Info</string>
    <string name="txt_vip_expect">New expected VIP expiry date:</string>
    <string name="txt_payment_method">Payment Method</string>
    <string name="txt_confirm_payment">Confirm Payment</string>
    <string name="txt_none_expired">None / Expired</string>
    <string name="txt_transaction_info">Transaction Information</string>
    <string name="txt_transaction_id">Transaction ID:</string>
    <string name="txt_transaction_amount">Amount:</string>
    <string name="txt_return_home">Back to home</string>
    <string name="txt_retry_transaction">Retry payment</string>
    <string name="txt_transaction_success">Payment successful!</string>
    <string name="txt_description_after_transaction_success">Your account has been successfully upgraded to VIP. Enjoy high-quality music now!</string>
    <string name="payment_error_cancelled">You have cancelled the payment transaction.</string>
    <string name="payment_error_expired">The payment transaction has expired.</string>
    <string name="payment_error_insufficient_balance">Insufficient bank account/wallet balance.</string>
    <string name="payment_error_failed">Payment failed (Error code: %1$s).</string>
    <string name="txt_payment_failed">Payment failed!</string>
    <string name="txt_vip">VIP</string>
    <string name="msg_vip_required_for_song">Only VIP accounts can play this song.</string>

    <string name="txt_mood_based_suggestions">✨ Mood-Based Suggestions</string>
    <string name="txt_suggestions">Suggestions</string>
    <string name="hint_how_are_you_feeling_today">How are you feeling today?</string>
</resources>