<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/txt_home" />

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_library_music_black"
        android:title="@string/txt_library" />

    <item
        android:id="@+id/navigation_placeholder"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/navigation_discovery"
        android:icon="@drawable/ic_dashboard_black"
        android:title="@string/txt_discovery" />

    <item
        android:id="@+id/navigation_user_profile"
        android:icon="@drawable/ic_account_circle_24"
        android:title="@string/txt_me" />
</menu>