<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_admin"
    app:startDestination="@id/navigate_manage_songs">

    <fragment
        android:id="@+id/navigate_manage_songs"
        android:name="com.infix.musicappv1.ui.admin.song.SongManagementFragment"
        android:label="@string/txt_manage_song"
        tools:layout="@layout/fragment_song_management">
        <action
            android:id="@+id/action_navigate_song_management_to_add_or_update_song"
            app:destination="@id/navigate_add_or_update_song" />
    </fragment>
    <fragment
        android:id="@+id/navigate_add_or_update_song"
        android:name="com.infix.musicappv1.ui.admin.song.update_add.AddOrUpdateSongFragment"
        android:label="{addOrUpdate}"
        tools:layout="@layout/fragment_add_or_update_song">
        <argument
            android:name="addOrUpdate"
            android:defaultValue="@string/txt_update_song"
            app:argType="reference" />
    </fragment>
    <fragment
        android:id="@+id/navigate_manage_albums"
        android:name="com.infix.musicappv1.ui.admin.album.AlbumManagementFragment"
        android:label="@string/txt_manage_album"
        tools:layout="@layout/fragment_album_management">
        <action
            android:id="@+id/action_navigate_manage_albums_to_navigate_add_or_update_album"
            app:destination="@id/navigate_add_or_update_album" />
    </fragment>
    <fragment
        android:id="@+id/navigate_add_or_update_album"
        android:name="com.infix.musicappv1.ui.admin.album.update_add.AddOrUpdateAlbumFragment"
        android:label="{addOrUpdate}"
        tools:layout="@layout/fragment_add_or_update_album">
        <argument
            android:name="addOrUpdate"
            android:defaultValue="@string/txt_update_album"
            app:argType="reference" />
    </fragment>
    <fragment
        android:id="@+id/navigate_manage_artists"
        tools:layout="@layout/fragment_artist_management"
        android:name="com.infix.musicappv1.ui.admin.artist.ArtistManagementFragment"
        android:label="@string/txt_manage_artist" >
        <action
            android:id="@+id/action_navigate_manage_artists_to_navigate_add_or_update_artist"
            app:destination="@id/navigate_add_or_update_artist" />
    </fragment>
    <fragment
        android:id="@+id/navigate_add_or_update_artist"
        android:name="com.infix.musicappv1.ui.admin.artist.add_update.AddOrUpdateArtistFragment"
        android:label="{addOrUpdate}"
        tools:layout="@layout/fragment_add_or_update_artist">
        <argument
            android:name="addOrUpdate"
            android:defaultValue="@string/txt_update_album"
            app:argType="reference" />
    </fragment>
</navigation>