<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.dialog.song_info.SongInfoDialog">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_song_info"
        android:layout_width="@dimen/width_140"
        android:layout_height="@dimen/height_140"
        android:background="@android:color/transparent"
        android:layout_marginTop="@dimen/margin_top_8"
        app:cardCornerRadius="@dimen/corner_radius_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_song_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription"
            tools:src="@tools:sample/backgrounds/scenic" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider_song_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:layout_marginStart="@dimen/margin_start_16"
        android:layout_marginTop="@dimen/margin_top_8"
        android:layout_marginEnd="@dimen/margin_end_16"
        android:background="@color/material_dynamic_primary50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view_song_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_16"
        android:layout_marginTop="@dimen/margin_top_4"
        android:layout_marginEnd="@dimen/margin_end_16"
        android:layout_marginBottom="@dimen/margin_end_16"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_song_info"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_song_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_4"
            android:layout_marginBottom="@dimen/margin_bottom_4"
            android:text="@string/txt_song_title_args"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_song_info_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_4"
            android:layout_marginBottom="@dimen/margin_bottom_4"
            android:text="@string/txt_artist_args"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_song_info_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_4"
            android:layout_marginBottom="@dimen/margin_bottom_4"
            android:text="@string/txt_album_args"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_song_info_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_4"
            android:layout_marginBottom="@dimen/margin_bottom_4"
            android:text="@string/txt_duration_args"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_song_info_number_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_4"
            android:layout_marginBottom="@dimen/margin_bottom_4"
            android:text="@string/txt_number_of_plays_args"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_song_info_is_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_4"
            android:layout_marginBottom="@dimen/margin_bottom_4"
            android:text="@string/txt_is_your_favorite_song_args"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_song_info_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_4"
            android:layout_marginBottom="@dimen/margin_bottom_4"
            android:text="@string/txt_category_args"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_song_info_publish_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_4"
            android:layout_marginBottom="@dimen/margin_bottom_4"
            android:text="@string/txt_publish_year_args"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>